google calendar, refactoring code, .env added